corrections to text-area overflow, char-counter and date of tweet

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -24,7 +24,6 @@
 .submit {}
 
 .error {
-  color: red;
   padding-left: 5px;
 }
 
