--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -4,7 +4,8 @@
   margin-left: 2em;
   margin-right: 2em;
   border-radius: 10px 10px 10px 10px;
-  padding-top: 0px;
+  padding-left: 1px;
+  padding-right: 1px;
   margin-bottom: 5px;
   opacity: 0.6;
   transition: 0.3s;
@@ -44,6 +45,7 @@
 }
 
 .tweet-submitted {
+  word-break: break-word;
   width: 100%;
   height: 110px;
   padding-top: 1em;
